* Add CSV Import/Export
* Manage translated field
* Add favorites menu
* Show records names in wizard title
* Add support for datetime_field to Many2One, Reference
* Add calendar view
* Move info-bar to the top
* Add noeval to PYSONDecoder
* Add support for pyson_order on action window
* Make datetimepicker locale aware
* Restore tab default order when no manual change
* Add support for column sorting
* Manage confirm attribute on buttons
* Call autocompletion when setting record value
* Limit readonly state for xxx2Many
* Simplify login with single database 
* Show records names in relate window title
* Add support for count on Action Window Domains
* Manage custom login process
* Add erase on Many2One
* Re-position icons on Many2One widget

Version 4.0.0 - 2016-05-02
* Bug fixes (see mercurial logs for details)
* Timedelta uses 30 days for month
* Manage context model of ir.action.act_window
* Add Note

Version 3.8.0 - 2015-11-02
* Initial release